--- a/Kelompok 1 - 9.3 Symmetric Power Method.ipynb
+++ b/Kelompok 1 - 9.3 Symmetric Power Method.ipynb
@@ -22,6 +22,7 @@
     "        \n",
     "    # Initialisasi vektor 1\n",
     "    x = np.ones(A.shape[0])\n",
+    "    x=x/np.linalg.norm(x) #normalisasi vektor\n",
     "    \n",
     "    # Perform power iterations\n",
     "    for i in range(max_iter):\n",
@@ -29,12 +30,7 @@
     "        y = A @ x\n",
     "        eigval=x.T @ y\n",
     "        if np.linalg.norm(y)==0:\n",
-    "            print('Eigenvector',x)\n",
-    "            print('A has eigenvalue 0, select new vector x and restart')\n",
     "            break\n",
-    "        \n",
-    "        \n",
-    "        # Compute the norm of Ax\n",
     "        norm_y = np.linalg.norm(y)\n",
     "        \n",
     "        err=np.linalg.norm(x-(y/norm_y))\n",
@@ -43,35 +39,13 @@
     "        # Check for convergence\n",
     "        if err < tol:\n",
     "            break\n",
-    "    eigvec = x / np.linalg.norm(x)\n",
     "    \n",
-    "    return eigval, eigvec"
+    "    return eigval, x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1eab9dd5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sym_power_method1(A, max_iter=1000, tol=1e-6):\n",
-    "    n = A.shape[0]\n",
-    "    x = np.ones(n) / np.sqrt(n)  # initial guess for the eigenvector\n",
-    "    lambda_prev = 0  # previous estimate of the eigenvalue\n",
-    "    for i in range(max_iter):\n",
-    "        x = A @ x\n",
-    "        x = x / np.linalg.norm(x)\n",
-    "        lambda_curr = np.dot(x, A @ x)\n",
-    "        if np.abs(lambda_curr - lambda_prev) < tol:\n",
-    "            break\n",
-    "        lambda_prev = lambda_curr\n",
-    "    return lambda_curr, x\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "2c34ebcb",
    "metadata": {},
    "outputs": [
@@ -79,7 +53,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eigenvalues [12.73337546+0.j -4.91916822+0.j -0.81420723+0.j]\n",
       "Dominant eigenvector: [0.62518155 0.43252044 0.64967231]\n",
       "Dominant eigenvalue: 12.73337545818855\n"
      ]
@@ -87,9 +60,7 @@
    ],
    "source": [
     "A = np.array([[2, 5, 7], [5, 1, 3], [7, 3, 4]])\n",
-    "eigenvalues=eigvals(A)\n",
-    "DomEigenvalue,x = sym_power_method1(A)\n",
-    "print('Eigenvalues', eigenvalues)\n",
+    "DomEigenvalue,x = sym_power_method(A)\n",
     "print(\"Dominant eigenvector:\", x)\n",
     "print(\"Dominant eigenvalue:\", DomEigenvalue)"
    ]
